# aicx

./: .gitignore  .semgrepignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  SECURITY.md  TRACKER.md  build.rs  cargo-audit.toml  install.sh
.claude/: settings.local.json
.github/: actionlint.yaml
.github/workflows/: ci.yml  merge-queue-gate.yml  npm-publish.yml  release-linux.yml  release.yml  retrieval-eval.yml
archive/skills/: README.md  _ARCHIVE_NOTE.md  vetcoders-suite-showcase.html
completions/: _aicx  aicx.bash  aicx.fish
crates/aicx-embeddings/: Cargo.toml  README.md
crates/aicx-embeddings/src/: cloud.rs  config.rs  gguf.rs  hf_cache.rs  lib.rs
crates/aicx-memex/: Cargo.toml
crates/aicx-memex/src/: daemon.rs  lib.rs
crates/aicx-monitor/: Cargo.toml
crates/aicx-monitor/src/: lib.rs
crates/aicx-parser/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/aicx-parser/examples/: noise_smoke.rs  oracle_envelope.rs
crates/aicx-parser/src/: card_header.rs  chunker.rs  frontmatter.rs  lib.rs  noise.rs  sanitize.rs  segmentation.rs  skill_collapse.rs  store.rs  timeline.rs  types.rs
crates/aicx-parser/src/adapters/: claude.rs  codex.rs  gemini.rs  grok.rs  junie.rs  mod.rs
crates/aicx-parser/src/engine/: canonical.rs  coverage.rs  identity.rs  mod.rs  model.rs  reader.rs  source.rs  validate.rs
crates/aicx-parser/src/projections/: canonical_chunks.rs  mod.rs  timeline.rs
crates/aicx-parser/tests/: adversarial_contract.rs  adversarial_perf_helper.rs  adversarial_support.rs  claude_adapter.rs  codex_adapter.rs  determinism.rs  gemini_adapter.rs  grok_adapter.rs  junie_adapter.rs  noise_filter_e2e.rs  normative_contract.rs  parser_engine_kernel.rs  sanitize_caps.rs  sidecar_backward_compat.rs
crates/aicx-parser/tests/support/: mod.rs
crates/aicx-progress-contracts/: Cargo.toml
crates/aicx-progress-contracts/src/: lib.rs
crates/aicx-retrieve/: Cargo.toml
crates/aicx-retrieve/src/: adapter_brute_force.rs  adapter_mmap.rs  adapter_tantivy.rs  error.rs  fusion_rrf.rs  lib.rs  manifest.rs  orchestrator.rs  trait_dense.rs  trait_fusion.rs  trait_lexical.rs  types.rs
crates/aicx-retrieve/tests/: fusion_rrf.rs  manifest_validation.rs  mmap_adapter.rs  orchestrator.rs  tantivy_adapter.rs
demo/: quantum-reasoning.txt
demo/sessions/: pivot-chwila.md  this-pivot-chat.jsonl
distribution/: EMBEDDERS.md  INSTALLER.md  README.md
distribution/npm/: PUBLISHING.md  README.md  sync-version.mjs  verify-metadata.mjs
docs/: AICX_Krajobraz_i_Priorytety_Uporzadkowania.md  ARCHITECTURE.md  BACKLOG.md  BUGFIXES.md  CARD_CONTRACT.md  COMMANDS.md  CONTEXT_CORPUS.md  DISTILLATION.md  EMBEDDINGS.md  INTENTS_CHECKPOINT_2026_0617.md  INTENTS_CLASSIFICATION_RULES.md  INTENTS_CORE_ONTOLOGY.md  MCP_AGENT_ADOPTION.md  ORACLE_CORPUS.md  OVERLAY.md  PARSER_ENGINE_CONTRACT.md  PARSER_NORMATIVE_CONTRACT.md  REDACTION.md  RELEASES.md  SOURCE_PROTECTION.md  STORE_LAYOUT.md  aicx-monolith-decomposition-plan.md  bug-tracker-aicx-followup-pass-2.md  bug-tracker-aicx-followup-pass-3.md  install-paths.md  linux-release-matrix.md  scope-overflow.md  vetcoders-suite-showcase.html
docs/incidents/: 2026-05-11_codescribe-segfault-0.10.0.md
examples/: loctree_consumer.rs
presence/: app.js  index.html  styles.css
reports/: NOISE_FILTER_v0.6.3.md
skills/: README.md  vetcoders-suite-showcase.html
skills/bravesearch/: SKILL.md  brave_search.py
skills/docs/: index.html
skills/vetcoders-followup/: SKILL.md
skills/vetcoders-init/: SKILL.md
src/: api.rs  auth.rs  catalog.rs  chunker.rs  cli.rs  cli_config.rs  corpus.rs  dashboard.rs  dashboard_inline_markdown.js  dashboard_server.rs  diagnostics.rs  doctor.rs  evidence.rs  frontmatter.rs  hf_cache.rs  init.rs  intents.rs  lib.rs  locks.rs  main.rs  mcp.rs  memex.rs  oracle.rs  output.rs  overlay.rs  parser_dispatch.rs  progress.rs  rank.rs  redact.rs  reports_extractor.rs  sanitize.rs  search_engine.rs  search_eval.rs  segmentation.rs  session_catalog.rs  sessions.rs  source_index.rs  source_path.rs  sources.rs  state.rs  (+9 more)
src/cli/: failure.rs
src/corpus/: audit.rs  format.rs  inference.rs  io.rs  noise.rs  repair.rs  roots.rs  tests.rs  types.rs  validate.rs
src/dashboard/: assets.rs  scan.rs  tests.rs
src/dashboard_server/: browse.rs  cors.rs  search.rs  tests.rs
src/doctor/: checks.rs  cleanup.rs  quarantine.rs  report.rs  tests.rs  types.rs
src/embedder/: embedded.rs  engine.rs  mod.rs
src/extraction/: conversation.rs  importer_support.rs  list.rs  mod.rs  project.rs  tests.rs
src/importers/: codescribe.rs  mod.rs  operator_markdown.rs
src/intents/: display.rs  schema.rs  tests.rs  types.rs
src/main/: tests.rs
src/output/: decision.rs  (+4 more)
tests/: build_provenance.rs  cli_config_show_hint.rs  cli_failure_integration.rs  cli_mcp_search_parity.rs  cli_mutation_warning.rs  cli_tail_help.rs  codescribe_ingest.rs  content_sanitization_e2e.rs  conversations_dual_channel.rs  dashboard_auth.rs  dashboard_filter.rs  dashboard_security.rs  dense_generation_contract.rs  diagnostics_summary.rs  doctor_quarantine_apply.rs  e2e_context_pack_ingest.rs  e2e_pipeline.rs  extract_cli_grammar.rs  frame_kind_contract.rs  help_text_completeness.rs  intents_no_module_leak.rs  legacy_codex_format_test.rs  locks_contention.rs  mcp_slim.rs  native_embedder.rs  operator_md_ingest.rs  project_filter_strict_surface.rs  retrieval_eval.rs  runtime_cli_store_contract.rs  runtime_reports_extractor.rs  secret_redaction_e2e.rs  session_catalog.rs  sigpipe_cli.rs  source_index_grok_gemini_e2e.rs  state_info_project_filter.rs  store_progress_markers.rs  wizard_smoke.rs
tools/: aicx-sztudio-v4-service.sh  aicx_problem_log.sh  bench_dense_migration.sh  bench_single_session.sh  canonicalize_completions.py  changelog_close.py  check_changed_file_allowlist.py  check_substrate_handoff.py  ci_macos_sign_and_notarize_bundle.sh  legacy_parser_manifest_v1.toml  mcp-http-smoke.sh  release-channel-check.sh  release_bundle.sh  release_sync.py  verify_no_legacy_parser.py  version_bump.py
(+168 files in other folders)
