[package]
name = "aicx"

version = "0.7.4"
edition = "2024"
rust-version = "1.91.1"
description = "Operator CLI + MCP server: canonical corpus first, optional semantic index second (Claude Code, Codex, Gemini)"
authors = ["Maciej Gad <void@div0.space>", "Monika Szymanska <hello@vetcoders.io>"]
license = "BUSL-1.1"
repository = "https://github.com/Loctree/aicx"
homepage = "https://github.com/Loctree/aicx"
documentation = "https://docs.rs/aicx"
readme = "README.md"
keywords = ["ai", "context", "timeline", "claude", "codex"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["*.html", "*.patch", "*.orig", ".ai-agents/", ".ai-context/", "scripts/", "skills/"]
autobins = false
default-run = "aicx"

[workspace]
members = [
    ".",
    "crates/aicx-embeddings",
    "crates/aicx-monitor",
    "crates/aicx-parser",
    "crates/aicx-progress-contracts",
    "crates/aicx-retrieve",
]
resolver = "3"

[features]
# aicx is semantic-by-default with two compiled-in backends: cloud HTTP
# embedder (the recommended VetCoders production default — zero-install,
# config-driven) and native GGUF (offline / dev workstations). Filesystem
# fuzzy stays the graceful fallback when neither backend can serve a query.
default = ["native-embedder", "cloud-embedder"]
# Lance semantic steer index and local BM25 ranking (optional).
# Opting out drops the lancedb C++ build requirements.
lance = ["dep:rmcp-memex"]
# Native embedder — first-choice in-process local embeddings through the
# reusable aicx-embeddings crate. The installed binary stays slim: models are
# hydrated into the HF cache or pinned by path, not silently bundled.
native-embedder = ["dep:aicx-embeddings", "aicx-embeddings/gguf"]
native-embedder-metal = ["native-embedder", "aicx-embeddings/metal"]
native-embedder-openmp = ["native-embedder", "aicx-embeddings/openmp"]
# Cloud embedder — HTTP POST against an OpenAI-compatible /v1/embeddings
# endpoint. Recommended VetCoders default for production: no GGUF download
# required; URL + model + api_key_env live in ~/.aicx/config.toml.
cloud-embedder = ["dep:aicx-embeddings", "aicx-embeddings/cloud"]
# Opt-in end-to-end pipeline test (`tests/e2e_pipeline.rs`). Requires the
# canonical `~/.aicx/config.toml` (cloud cascade) or a hydrated GGUF model.
# Fail-fast on missing preconditions per operator doctrine — no silent skip.
# Run with `cargo test --features e2e-aicx --test e2e_pipeline` (or
# `make test-e2e`). CI without these preconditions does not run it.
e2e-aicx = ["native-embedder", "cloud-embedder"]

[dependencies]
aicx-embeddings = { version = "0.7.0", optional = true, default-features = false }
aicx-monitor = { version = "0.1.0", path = "crates/aicx-monitor" }
aicx-parser = { version = "0.7.0", features = ["json-schema"] }
aicx-progress-contracts = { version = "0.1.0", path = "crates/aicx-progress-contracts" }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
siphasher = "1.0"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
indicatif = "0.18"
globset = "0.4"
ratatui = "0.29"
crossterm = "0.29"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net", "signal"] }
rmcp = { version = "1.2", features = ["server", "schemars", "transport-io", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
libc = "0.2.183"
rmcp-memex = { package = "rust-memex", version = "0.6.5", default-features = false, optional = true }
schemars = "1.2.1"

[dev-dependencies]
toml = "0.8"
filetime = "0.2"

[patch.crates-io]
aicx-parser = { path = "crates/aicx-parser" }
aicx-embeddings = { path = "crates/aicx-embeddings" }
aicx-retrieve = { path = "crates/aicx-retrieve" }
aicx-monitor = { path = "crates/aicx-monitor" }
aicx-progress-contracts = { path = "crates/aicx-progress-contracts" }

[[bin]]
name = "aicx"
path = "src/main.rs"

[[bin]]
name = "aicx-mcp"
path = "src/bin/aicx_mcp.rs"

[lib]
name = "aicx"
path = "src/lib.rs"

[profile.release]
lto = true
strip = true
