[package]
name = "aicx-embeddings"
version = "0.6.2"
edition = "2024"
rust-version = "1.88"
description = "Reusable local embedding providers for AICX and rust-memex"
authors = ["Maciej Gad <void@div0.space>", "Monika Szymanska <hello@vetcoders.io>"]
license = "BUSL-1.1"
repository = "https://github.com/Loctree/aicx"
homepage = "https://github.com/Loctree/aicx"
readme = "README.md"
keywords = ["ai", "embeddings", "gguf", "retrieval"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
gguf = ["dep:llama-cpp-2"]
metal = ["gguf", "llama-cpp-2/metal"]
openmp = ["gguf", "llama-cpp-2/openmp"]
cuda = ["gguf", "llama-cpp-2/cuda"]
vulkan = ["gguf", "llama-cpp-2/vulkan"]
# Cloud-config based embedder: HTTP POST against an OpenAI-compatible
# `/v1/embeddings` endpoint. The recommended VetCoders default for
# zero-install operator workflows; native GGUF stays for offline use.
cloud = ["dep:reqwest", "dep:serde_json"]

[dependencies]
anyhow = "1.0"
dirs = "6"
llama-cpp-2 = { version = "0.1.145", optional = true, default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls-native-roots"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
toml = "0.8"
tracing = "0.1"
