[package]
name = "aicx-parser"
version = "0.5.6"
edition = "2024"
rust-version = "1.85"
description = "Canonical parser/store boundary for ai-contexters"
authors = ["Maciej Gad <void@div0.space>", "Monika Szymanska <hello@vetcoders.io>"]
license = "MIT"

[lib]
name = "aicx_parser"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
globset = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[dev-dependencies]
filetime = "0.2"
