[package]
name = "aicx-parser"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"
license = "BUSL-1.1"
description = "Transcript parser, chunker, and slicer for AI session transcripts (Claude, Codex, Gemini, Junie). Companion crate of aicx."
authors = ["Maciej Gad <void@div0.space>", "Monika Szymanska <hello@vetcoders.io>"]
repository = "https://github.com/Loctree/aicx"
homepage = "https://github.com/Loctree/aicx"
readme = "README.md"
keywords = ["ai", "transcript", "chunker", "parser", "claude"]
categories = ["text-processing", "parsing"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
schemars = { version = "1.2.1", optional = true }

[features]
default = []
json-schema = ["dep:schemars"]
