[package]
name = "aicx-progress-contracts"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"
license = "BUSL-1.1"
description = "Rich event contracts for aicx pipeline progress: IndexEvent stream, telemetry snapshot, sink trait."
authors = ["Maciej Gad <void@div0.space>", "Monika Szymanska <hello@vetcoders.io>"]
repository = "https://github.com/Loctree/aicx"
homepage = "https://github.com/Loctree/aicx"
documentation = "https://docs.rs/aicx-progress-contracts"
readme = "../../README.md"
keywords = ["ai", "context", "progress", "telemetry", "events"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
