[package]
name = "aicx-retrieve"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"
license = "BUSL-1.1"
description = "Retrieval trait surface and manifest contract for aicx hybrid indexes."
authors = ["Maciej Gad <void@div0.space>", "Monika Szymanska <hello@vetcoders.io>"]
repository = "https://github.com/Loctree/aicx"
homepage = "https://github.com/Loctree/aicx"
documentation = "https://docs.rs/aicx-retrieve"
readme = "../../README.md"
keywords = ["ai", "retrieval", "search", "embeddings", "manifest"]
categories = ["text-processing", "development-tools"]

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
