[package]
name = "aicx-retrieve"
version = "0.2.0"
edition = "2024"
rust-version = "1.91.1"
license = "BUSL-1.1"
description = "Retrieval trait surface, Tantivy adapter, and manifest contract for aicx hybrid indexes."
authors = ["Maciej Gad <void@div0.space>", "Monika Szymanska <hello@vetcoders.io>"]
repository = "https://github.com/Loctree/aicx"
homepage = "https://github.com/Loctree/aicx"
documentation = "https://docs.rs/aicx-retrieve"
readme = "../../README.md"
keywords = ["ai", "retrieval", "search", "embeddings", "manifest"]
categories = ["text-processing", "development-tools"]

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tantivy = "0.26"
tantivy-stemmers = { version = "0.4", features = ["polish_yarovoy_unaccented"] }
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
